# advent-of-code-2023

./: .gitattributes  .gitignore  Cargo.toml  README.md  boilerplate.rs
day_01/: Cargo.toml
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: Cargo.toml
day_03/src/: main.rs
day_04/: Cargo.toml
day_04/src/: main.rs
day_05/: Cargo.toml
day_05/src/: main.rs
day_06/: Cargo.toml
day_06/src/: main.rs
day_07/: Cargo.toml
day_07/src/: main.rs
day_08/: Cargo.toml
day_08/src/: main.rs
day_09/: Cargo.toml
day_09/src/: main.rs
day_10/: Cargo.toml  test.txt
day_10/src/: main.rs
src/: main.rs
src/commands/: client.rs  inputs.rs  mod.rs
utils/: .gitignore  Cargo.toml
utils/src/: lib.rs
