[package]
name = "aocrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
http-cache-reqwest = "0.12.0"
reqwest = "0.11.22"
reqwest-middleware = "0.2.4"
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
